--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ html {
 .intro{
     width: 100%;
     height: 100vh;
-    background-image: url('/images/intro.jpg');
+    background-image: url('../images/intro.jpg');
     background-repeat: no-repeat;
     background-origin: border-box;
     background-size: cover;
